added css-min in favor of yui-compress. public directory now copies over to debug and release directories. templates now compile to app/templates/ and are then concatenated into app.js

--- a/release/index.html
+++ b/release/index.html
@@ -12,8 +12,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<link rel="stylesheet" href="app.min.css">
-		<script src="vendor/modernizr-2.6.2.min.js"></script>
+		<link rel="stylesheet" href="app.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -21,14 +20,6 @@
         <![endif]-->
 
 		<!-- JAVASCRIPTS -->
-		<script type="text/javascript" src="app.min.js"></script>
-		
-		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
+		<script type="text/javascript" src="app.js"></script>
     </body>
 </html>
